--- a/InventorySystem.Web/appsettings.json
+++ b/InventorySystem.Web/appsettings.json
@@ -1,12 +1,18 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-UTAU3M5;Database=InventarioIT;User Id=sa;Password=232003;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "Default": "Server=192.168.100.12;Database=InventarioIT;User Id=sa;Password=232003;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+
+  "Gemini": {
+    "ApiKey": "AIzaSyD-bIUjiSJnaRxrRp-2-AktO0UXB15B4CA"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
