--- a/InventorySystem.Web/appsettings.json
+++ b/InventorySystem.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-UTAU3M5;Database=InventarioIT;User Id=sa;Password=232003;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "Default": "Server=.\\SQLEXPRESS02;Database=InventarioIT;User Id=sa;Password=232003;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
